Bug 791011 - When doing a hash navigation, cancel any outstanding document loads, but don't cancel other network activity. r=bz